--- a/example/Cap3_UI/app/src/main/res/layout/activity_layout.xml
+++ b/example/Cap3_UI/app/src/main/res/layout/activity_layout.xml
@@ -1,9 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".LayoutActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="这里将简单介绍安卓中的三种布局，更多的布局请自学😁。下面的图片是Activity布局结构图"/>
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="221dp"
+        android:src="@drawable/layout" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/linear_layout_bu"
+        android:text="LinearLayout"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/relative_layout_bu"
+        android:text="RelativeLayout"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/frame_layout_bu"
+        android:text="FrameLayout"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="布局可以帮助我们摆放我们的组件"/>
+
+</LinearLayout>
