--- a/example/app/src/main/res/layout/activity_fragment1.xml
+++ b/example/app/src/main/res/layout/activity_fragment1.xml
@@ -7,6 +7,7 @@
     android:orientation="horizontal"
     tools:context=".Fragment1">
 
+<!--    第三步，添加fragment布局-->
     <fragment
         android:layout_width="0dp"
         android:layout_height="match_parent"
